
However, for continuous integration, it's sometimes difficult to automatically run a real browser on the integration server. So, since this release, Play embeds a stand-alone headless browser based on "HtmlUnit":http://htmlunit.sourceforge.net/.

When you run tests with **play auto-test**, this browser will be used. 

!images/auto-test!

h2. <a name="server">New HTTP server based on JBoss Netty</a>

The Play 1.1 release uses "JBoss Netty":http://www.jboss.org/netty instead of Apache Mina as HTTP server. This should not change anything for your application, and the performance of the HTTP layer be the same as before. However, this fixes some small HTTP bugs that affected Play 1.0.x.

This new HTTP server will allow us the support more advanced HTTP features soon, such as WebSockets.

h2. <a name="libs">Updated core libraries and improved naming</a>

As Play framework is a full-stack framework it directly embeds the required Java libraries. All of these libraries have been updated, including the new Hibernate 3.5.x release that provides JPA 2 support.

We have also adopted a better naming conventions for embedded libraries. If you look in the **framework/lib** directory you can now see what the exact version of each library is.

h2. <a name="model">New database-agnostic play.db.Model API</a>

Play 1.1 introduces a new *play.db.Model* API. This API is not intended to be used directly by applications, but it provides a generic datastore interface that can be implemented by module’s creator to provide integration with any kind of datastore (including NoSQL based ones).
