@@ -3,6 +3,5 @@
 #{selenium}
     // Open the home page, and check that no error occured
     open('/')
-    waitForPageToLoad(1000)
     assertNotTitle('Application error')
 #{/selenium}
